[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tracelock"
version = "2.3.0"
description = "TraceLock — detective OSINT with full-screen TUI, multi-hop triangulation, agentic tool loop, messaging gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TraceLock contributors" }]
keywords = [
  "qwen",
  "qwen-cloud",
  "autopilot-agent",
  "osint",
  "hitl",
  "dashscope",
  "alibaba-cloud",
]
dependencies = []

[project.optional-dependencies]
qwen = ["openai>=1.30.0"]
browser = ["playwright>=1.40"]
dev = ["pytest>=7.0", "openai>=1.30.0"]

[project.scripts]
tracelock = "tracelock.demo:main"
tl = "tracelock.demo:main"
find = "tracelock.demo:main_find"
osint-cli = "osint_cli.cli:main"

[project.urls]
Homepage = "https://github.com/SeraKah-1/tracelock"
Documentation = "https://github.com/SeraKah-1/tracelock#readme"
Hackathon = "https://qwencloud-hackathon.devpost.com/"

[tool.setuptools.packages.find]
include = ["tracelock*", "osint_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
